--- a/ProMgt.Client/Components/Dialogs/EditPriorityDialog.razor
+++ b/ProMgt.Client/Components/Dialogs/EditPriorityDialog.razor
@@ -118,7 +118,7 @@
 
     private class ColorResponse
     {
-        public string color { get; set; }
+        public string? color { get; set; }
     }
 
 }
