--- a/ProMgt.Client/Components/ProjectTitleBarLayout/ProjectTitleBar.razor
+++ b/ProMgt.Client/Components/ProjectTitleBarLayout/ProjectTitleBar.razor
@@ -126,7 +126,7 @@
         //     };
 
         // var dialogResponse = await IDialogService.ShowAsync<EditProjectStatusDialog>("Edit status", options);
-
+        await Task.CompletedTask;
     }
 
     private void InfoDrawer()
