--- a/ProMgt.Client/Layout/NavMenu.razor
+++ b/ProMgt.Client/Layout/NavMenu.razor
@@ -142,8 +142,8 @@
 
     private class SignOutResult
     {
-        public string Message { get; set; }
-        public string ReturnUrl { get; set; }
+        public string? Message { get; set; }
+        public string? ReturnUrl { get; set; }
     } 
 
     /// <summary>
