--- a/ProMgt.Client/Pages/Generics/SignUp.razor
+++ b/ProMgt.Client/Pages/Generics/SignUp.razor
@@ -236,7 +236,7 @@
 
     private StepperActionsJustify _stepperActionsJustify = StepperActionsJustify.SpaceBetween;
 
-    private bool _showStaticContent = true;
+    //private bool _showStaticContent = true;
 
     private bool _addResultStep = true;
 
