--- a/ProMgt.Client/Pages/Generics/SignupConfirmation.razor
+++ b/ProMgt.Client/Pages/Generics/SignupConfirmation.razor
@@ -44,5 +44,6 @@ else
         emailConfirmationLink = NavigationManager.ToAbsoluteUri(NavigationManager.Uri).Query.Contains("code")
             ? NavigationManager.Uri
             : null;
+            await Task.CompletedTask;
     }
 }
