--- a/ProMgt.Client/Components/Dialogs/TaskStatusDialog.razor
+++ b/ProMgt.Client/Components/Dialogs/TaskStatusDialog.razor
@@ -117,7 +117,7 @@
 
     private class ColorResponse
     {
-        public string color { get; set; }
+        public string? color { get; set; }
     }
 
 }
