fix(auth): Resolve issues with login and signup

--- a/ProMgt.Client/Components/ProjectTitleBarLayout/ProjectTitleBar.razor
+++ b/ProMgt.Client/Components/ProjectTitleBarLayout/ProjectTitleBar.razor
@@ -79,12 +79,12 @@
         <MudSpacer />
         <MudItem Class="d-flex align-center">
             <MudAvatarGroup MaxColor="Color.Primary">
-                <MudAvatar Color="Color.Primary">M</MudAvatar>
-                <MudAvatar Color="Color.Secondary">U</MudAvatar>
-                <MudAvatar Color="Color.Info">D</MudAvatar>
-                <MudAvatar Color="Color.Primary">M</MudAvatar>
-                <MudAvatar Color="Color.Secondary">U</MudAvatar>
-                <MudAvatar Color="Color.Info">D</MudAvatar>
+                <MudAvatar Size="Size.Small" Color="Color.Primary">M</MudAvatar>
+                <MudAvatar Size="Size.Small" Color="Color.Secondary">U</MudAvatar>
+                <MudAvatar Size="Size.Small" Color="Color.Info">D</MudAvatar>
+                <MudAvatar Size="Size.Small" Color="Color.Primary">M</MudAvatar>
+                <MudAvatar Size="Size.Small" Color="Color.Secondary">U</MudAvatar>
+                <MudAvatar Size="Size.Small" Color="Color.Info">D</MudAvatar>
             </MudAvatarGroup>
             <MudItem class="px-2">
                 <MudButton Size="Size.Small" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.FolderShared" Color="Color.Secondary">Share</MudButton>
