--- a/ProMgt.Client/Pages/Project/CreateProject.razor
+++ b/ProMgt.Client/Pages/Project/CreateProject.razor
@@ -1,8 +1,7 @@
-﻿@page "/"
+﻿@page "/dashboard"
 @using System.Net.Http.Json
 @using System.Text.Json
-
-
+@inject ProjectService ProjectService
 @inject IDialogService DialogService
 @inject HttpClient HttpClient
 
@@ -56,48 +55,8 @@
     // Add the logic to open the create project Dialog
     private async Task CreateProjectHandler()
     {
-        errorMessage = string.Empty;
-        var options = new DialogOptions
-            {
-                CloseOnEscapeKey = true,
-                CloseButton = true,
-                MaxWidth = MaxWidth.Small,
-                FullWidth = true
-            };
-
-        var dialogResponse = await DialogService.ShowAsync<CreateProjectDialog>("Create new Project", options);
-
-        var result = await dialogResponse.Result;
-
-        ProjectCreateModel projectResponse = new();
-
-
-        if (result != null && !result.Canceled)
-        {
-            projectResponse = result.Data as ProjectCreateModel ?? new();
-
-        }
-        try
-        {
-            var response = await HttpClient.PostAsJsonAsync<ProjectCreateModel>("api/project", projectResponse);
-            if (response.IsSuccessStatusCode)
-            {
-                await GetProjects();
-                StateHasChanged();
-            }
-            else
-            {
-                errorMessage = $"Error: {response.ReasonPhrase}";
-            }
-        }
-        catch (HttpRequestException httpEx)
-        {
-            errorMessage = $"Request error: {httpEx.Message}";
-        }
-        catch (Exception ex)
-        {
-            errorMessage = $"An unexpected error occurred: {ex.Message}";
-        }
+        ProjectService.CreateNewProject();
+        await Task.CompletedTask;
 
     }
 
