--- a/ProMgt.Client/Pages/Project/ProjectSpace.razor
+++ b/ProMgt.Client/Pages/Project/ProjectSpace.razor
@@ -10,8 +10,8 @@
 @inject ISnackbar Snackbar
 @inject NavigationManager NavigationManager
 @inject ProjectService ProjectService
-@* @attribute [Authorize]
- *@
+@attribute [Authorize]
+
 <MudThemeProvider IsDarkMode="@(ThemeService.CurrentTheme == ProMgtTheme.DarkTheme)" Theme="@ThemeService.CurrentTheme" />
 <ProjectTitleBar ProjectId="@ProjectId" />
 <MudDivider DividerType="DividerType.Middle" Class="mx-0" />
